# omnilingo

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  index.html  package.json  release-please-config.json  style.css  vitest.config.ts
.github/workflows/: build-mobile.yml  build.yml  release-please.yml  release.yml
data/: dictionary-sources.json  dictionary.json  grammar-topics.json  verbs.json
e2e/: run.ts
exercises/: completed.md  pending.md
js/: app.js  bridge.js  srs.js
js/components/: exercise.js  flashcard.js  progress-bar.js
js/views/: chat.js  conjugation.js  dashboard.js  dictionary.js  grammar.js  learn.js  review.js
memory/: conjugation-log.md  errors.md  grammar-log.md  progress.md  vocabulary.md
memory/sessions/: 2026-03-16.md  2026-04-10.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/: 001_initial_schema.sql  002_ai_providers.sql  003_favorites_and_stats.sql  004_chat_history.sql  005_simplification.sql  006_custom_ai_url.sql  007_favorite_lists.sql  008_drop_srs.sql  009_remove_freedict.sql  010_dictionary_entries.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  chat.rs  conjugation.rs  conversation.rs  dictionary.rs  download.rs  favorites.rs  grammar.rs  import.rs  memory.rs  mod.rs  settings.rs  speech.rs  srs.rs  stats.rs
src/__tests__/: bridge.test.ts  components.test.tsx  exampleData.test.ts  markdown.test.ts  navigation.test.ts  onboarding.test.ts  schemas.test.ts  setup.ts  store.test.ts  tools.test.ts  user-journeys.test.ts  wordUtils.test.ts
src/components/: Achievements.tsx  CommandPalette.tsx  DeckPopover.tsx  DictionaryPairSelector.tsx  Exercise.tsx  FavoriteButton.tsx  Flashcard.tsx  LanguagePackDownloader.tsx  LanguagePairBar.tsx  Layout.tsx  LearningPath.tsx  ListPopover.tsx  MicButton.tsx  Onboarding.tsx  ProgressBar.tsx  SessionTimer.tsx  StreakCalendar.tsx  WordOfDay.tsx
src/components/tools/: ConjugateTool.tsx  ContextTool.tsx  CorrectorTool.tsx  DailyWordsTool.tsx  DefinitionTool.tsx  DictationTool.tsx  ExerciseBox.tsx  MasteryTool.tsx  PronunciationTool.tsx  ReaderTool.tsx  (+5 more)
src/i18n/: index.ts
src/lib/: ai-cache.ts  bridge.ts  exampleData.ts  exampleTranslations.ts  languages.ts  markdown.ts  mastery.ts  onboarding.ts  platform.ts  speech.ts  useExampleTranslations.ts  useFeaturePair.ts  useStreamingResponse.ts  wordUtils.ts
src/store/: AppContext.tsx  useAppStore.ts  useConjugationStore.ts  useConversationStore.ts  useDictionaryStore.ts  useFlashcardsStore.ts  useGrammarStore.ts  useToolsStore.ts
src/types/: index.ts
src/views/: Chat.tsx  Conjugation.tsx  Conversation.tsx  Corrector.tsx  Dashboard.tsx  Dictionary.tsx  Favorites.tsx  Flashcards.tsx  Grammar.tsx  Learn.tsx  Quiz.tsx  Rephrase.tsx  Review.tsx  Settings.tsx  Stats.tsx  Synonyms.tsx  TextAnalysis.tsx  Tools.tsx
(+7 files in other folders)
