[package]
name = "omnilingo"
version = "2.11.1"
description = "Omnilingo — Language learning desktop app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnilingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hound = "3.5"
tauri-plugin-mcp-bridge = { version = "0.10", optional = true }

# STT: heavy C++ dep, optional feature flag
whisper-rs = { version = "0.16", optional = true }

[features]
default = []
stt = ["whisper-rs"]
mcp = ["tauri-plugin-mcp-bridge"]
