[package]
name = "omnilingo"
version = "2.17.0"
description = "Omnilingo — Language learning desktop app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnilingo_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
tauri-plugin-mcp-bridge = { version = "0.10", optional = true }

[features]
default = []
mcp = ["tauri-plugin-mcp-bridge"]
